add width of 100% to brand and storage and centred main

--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,8 @@ main {
   display: flex;
   width: 85%;
   position: relative;
+  justify-content: center;
+  align-items: center;
  
 }
 
@@ -89,9 +91,9 @@ li {
   text-align: center;
   width: 180px;
   right: 2rem;
-  top: 0;
+  top: -20px;
   margin: 0;
-  left: 62%;
+  left: 72%;
   box-sizing: border-box;
   padding-left: 36px;
   display: flex;
@@ -197,12 +199,14 @@ li {
    
     flex: 1;
     margin-right: 0px;
+    width: 100%;
   }
 
   .storage {
     flex: 1;
     padding: 0px 0px 20px 0px;
     margin: 20px 0px 0px 0px;
+    width: 100%;
   }
 
   .space-left {
